--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,17 @@ h3 {
   color:#FFD740;
 }
 
-h1 {
+h3{
+  font-family: "Miniver", cursive;
+}
+
+h2 {
   color:#FFAB00 ;
+}
+
+.navbar-brand{
+
+  font-family: "Miniver", cursive;
 }
  
 
